--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -14,7 +14,7 @@ body {
 
 .link {
   color: grayscale($color: #464646);
-  margin-right: 20px;
+  //margin-right: 20px;
   padding-bottom: 2px;
 
   &:hover {
@@ -37,6 +37,11 @@ body {
       text-align: right;
       font-size: 13px;
       margin: 5px 70px 5px 70px;
+      ul{
+        li{
+          margin-left: 20px;
+        }
+      }
     }
 
     .header {
@@ -53,15 +58,18 @@ body {
         ul {
           margin: 0;
           li {
+            margin-right: 20px;
           }
         }
       }
       .right-side {
+        margin-right: 0px;
         ul {
           margin: 0;
-
-          li {
+          li{
+            margin-left: 20px;
           }
+        
         }
       }
     }
@@ -92,6 +100,7 @@ body {
         .review {
           border-bottom: 1px solid rgba(255, 255, 255, 0.3);
           font-size: 13px;
+          margin-right: 20px;
         }
         p {
           font-size: 15px;
@@ -113,6 +122,7 @@ body {
         }
         .details {
           border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+          
           p {
             margin: 0px;
             font-size: 15px;
